Fixed a scrolling issue on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,7 @@ body.modal-open #oddcast-content{
 
 #oddcast-wrapper .modal{
 	display: none;
+	-webkit-overflow-scrolling: touch;
 }
 
 #oddcast-wrapper .modal,
